--- a/drawing2.html
+++ b/drawing2.html
@@ -362,7 +362,7 @@
               .append("path")
               .attr(
                 "d",
-                `M${startX},${startY - 5} Q${controlX + 2},${controlY - 2} ${
+                `M${ratiocheck2 ? startX: startX+4},${ ratiocheck2 ? startY-5 :startY} Q${controlX + 2},${controlY - 2} ${
                   endX - 2
                 },${endY + 5}`
               )
@@ -383,9 +383,9 @@
                 .append("path")
                 .attr(
                   "d",
-                  `M${startX},${startY + 4} Q${controlX + 4},${controlY + 1} ${
+                  `M${ratiocheck2 ? startX+4 :startX+4 },${startY + 4.8} Q${controlX + 5},${ratiocheck2 ? controlY : controlY + 1} ${
                     endX + 2
-                  },${endY + 6}`
+                  },${endY + 8}`
                 )
                 .attr("fill", "none")
                 .attr("stroke", portColor)
@@ -403,7 +403,7 @@
               .append("path")
               .attr(
                 "d",
-                `M ${startX1},${startY1 - 2} L ${endX1},${startY1 - 2}`
+                `M ${startX1},${startY1 - 2} L ${ratiocheck2 ?endX1+10: endX1+4},${startY1 - 1}`
               )
               .attr("fill", "none")
               .attr("stroke", line2color)
@@ -418,7 +418,7 @@
                 .append("path")
                 .attr(
                   "d",
-                  `M ${startX1 + 30},${startY1 + 4} L ${endX1},${startY1 + 4}`
+                  `M ${startX1 + 30},${startY1 + 4} L ${ratiocheck2 ? endX1+10 : endX1 +5 },${startY1 + 4}`
                 )
                 .attr("fill", "none")
                 .attr("stroke", portColor)
@@ -926,7 +926,7 @@
         generateMetrics();
       }
 
-      generateDiagram(4, 5, 4, "8:9", true);
+      generateDiagram(4, 6, 4, "1:1", true);
     </script>
   </body>
 </html>
